--- a/index.html
+++ b/index.html
@@ -5,11 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
-    <script src="game.js"></script>
+    <div>
+        <h1>Rock paper scissors</h1>
 
+        <div id="count">
+            <h2>You: </h2>
+            <h2>Computer: </h2>
+        </div>
+
+        <div>
+            <p id="info">
+                Game info and what's happening and stuff...
+            </p>
+        </div>
+
+        <div id="choice">
+            <button>Rock</button>
+            <button>Paper</button>
+            <button>Scissors</button>
+        </div>
+
+        <div id="game">
+            <button id="play">Play!</button>
+            <button id="give-up">Give up :(</button>
+        </div>
+    </div>
+
+    <script src="game.js"></script>
 </body>
 
 </html>
