Change functions to work with buttons

--- a/index.html
+++ b/index.html
@@ -12,20 +12,26 @@
         <h1>Rock paper scissors</h1>
 
         <div id="count">
-            <h2>You: </h2>
-            <h2>Computer: </h2>
+            <div>
+                <h2>You</h2>
+                <h2>0</h2>
+            </div>
+            <div>
+                <h2>Computer</h2>
+                <h2>0</h2>
+            </div>
         </div>
 
         <div>
-            <p id="info">
-                Game info and what's happening and stuff...
-            </p>
+            <h2 id="info">
+                Select your sign and play!
+            </h2>
         </div>
 
         <div id="choice">
-            <button>Rock</button>
-            <button>Paper</button>
-            <button>Scissors</button>
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
         </div>
 
         <div id="game">
