--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div id="count">
             <div>
                 <h2>You</h2>
-                <h2>0</h2>
+                <h2 id="user-score">0</h2>
             </div>
             <div>
                 <h2>Computer</h2>
-                <h2>0</h2>
+                <h2 id="comp-score">0</h2>
             </div>
         </div>
 
@@ -36,7 +36,7 @@
 
         <div id="game">
             <button id="play">Play!</button>
-            <button id="give-up">Give up :(</button>
+            <button id="new">New game</button>
         </div>
     </div>
 
