--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <div>
             <h2 id="info">
-                Select your sign and play!
+                Make your choice and play!
             </h2>
         </div>
 
